src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
    --font-sans: "Fira Code";
  }
}

@layer base {
  * {
    @apply border-border;
  }
  html {
	  background: #2f1846;
  }
  body {
    font-feature-settings: "rlig" 1, "calt" 1;
	background: radial-gradient(
	    farthest-corner circle,
	    #4788c5 0%,
	    #2f1846 50%,
	    #09090b 100%
	  )
	  bottom right / 250% 350%;
        @apply duration-1000 text-foreground;
  }
}

